style.css
* {
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
}

img {
    width: 100%;
    border-radius: 5px;
}

.hero-image {
    background-image: url(./images/scotland-1987599_1280.jpg);
    height: 352px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.hero-text {
    color: whitesmoke;
    position: absolute;
    top: 180px;
    text-align: center;
    width: 100%;
    font-size: 4rem;
}

.two-column {
    display: grid;
    grid-template-columns: 1fr 3fr;
    gap: 50px;
    width: 80%;
    margin: auto;
    margin-top: 40px;
}

.info {
    font-size: 1.25rem;
}

.three-column {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 100px;
    width: 80%;
    margin: auto;
    margin-top: 40px;
    margin-bottom: 50px;
}

.card {
    background-color: rgb(0, 0, 140);
}

.card-text {
    text-align: center;
    color: whitesmoke;
}

